2014-05-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer): Slightly more
	informative comment.
	* info/filesys.c (info_find_fullpath): Disabled code removed.
	* info/window.c: Inaccurate section label comment removed.
	(window_make_window): Disabled code removed.

2014-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: Account for incomplete output from
	pseudotty.

2014-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Use text_buffer_* functions
	directly.  Don't create apropos window if nothing found.
	* info/infodoc.c (dump_map_to_message_buffer)
	(dump_map_to_text_buffer): Renamed.  Take struct text_buffer *
	argument.
	(create_internal_info_help_node): Don't use *_message_buffer
	functions.
	* info/nodemenu.c (get_visited_nodes): Don't use *_message_buffer
	functions.
	* info/window.c (build_message_node): Don't use *_message_buffer
	functions.
	(message_buffer, build_message_buffer, message_buffer_to_node)
	(initialize_message_buffer, printf_to_message_buffer): Removed.

2014-05-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\documentlanguage): \let_ inside \tex,
	no need for extra group it seems; and call
	\documentlanguagetrywithoutunderscore without braces,
	so we get the expected parsing-off of the _ (or not).
	Report from German Arias, help-texinfo 18 May 2014 20:26:02.

2014-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_possible_completions): Use text_buffer_*
	functions instead of *_message_buffer functions.
	* info/window.c (text_buffer_to_node): New function.

2014-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (dump_map_to_message_buffer): Don't call
	character_width or message_buffer_length_this_line.
	* info/window.c (message_buffer_length_this_line, character_width)
	(string_width): Removed.
	(message_buffer): No longer static.

	* info/window.c (calculate_line_starts): Merged into